--- a/UnityBuildServer/UnityBuildServer.csproj
+++ b/UnityBuildServer/UnityBuildServer.csproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\LibGit2Sharp.NativeBinaries.1.0.129\build\LibGit2Sharp.NativeBinaries.props" Condition="Exists('..\packages\LibGit2Sharp.NativeBinaries.1.0.129\build\LibGit2Sharp.NativeBinaries.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -31,29 +32,52 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="LibGit2Sharp">
+      <HintPath>..\packages\LibGit2Sharp.0.22.0\lib\net40\LibGit2Sharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Project.cs" />
-    <Compile Include="Target.cs" />
-    <Compile Include="BuildStep.cs" />
-    <Compile Include="UnityBuildSettings.cs" />
-    <Compile Include="UnityVersion.cs" />
-    <Compile Include="TargetBuilder.cs" />
-    <Compile Include="UnityProcess.cs" />
+    <Compile Include="Builder.cs" />
     <Compile Include="RunProcessAsTask\ProcessEx.cs" />
     <Compile Include="RunProcessAsTask\ProcessEx.overloads.cs" />
     <Compile Include="RunProcessAsTask\ProcessResults.cs" />
     <Compile Include="Workspace.cs" />
-    <Compile Include="GitProcess.cs" />
-    <Compile Include="Repository.cs" />
+    <Compile Include="VersionControl\Git\Git.cs" />
+    <Compile Include="VersionControl\Git\LFSFilter.cs" />
+    <Compile Include="Project\ProjectConfig.cs" />
+    <Compile Include="VersionControl\IVersionControlSystem.cs" />
+    <Compile Include="Project\BuildStepConfig.cs" />
+    <Compile Include="VersionControl\IVCSConfiguration.cs" />
+    <Compile Include="VersionControl\Git\GitConfiguration.cs" />
+    <Compile Include="Project\BuildTargetConfig.cs" />
+    <Compile Include="VersionNumber.cs" />
+    <Compile Include="Project\Distribution\DistributionConfig.cs" />
+    <Compile Include="Project\Distribution\FTPDistribution.cs" />
+    <Compile Include="Project\Distribution\SteamDistribution.cs" />
+    <Compile Include="Project\Archival\ArchiveConfig.cs" />
+    <Compile Include="Project\Archival\FolderArchive.cs" />
+    <Compile Include="Project\Archival\ZipArchive.cs" />
+    <Compile Include="Project\BuildSteps\ShellBuildStep\ShellBuildStep.cs" />
+    <Compile Include="Project\BuildSteps\UnityBuildStep\UnityBuildStep.cs" />
+    <Compile Include="Project\BuildSteps\UnityBuildStep\UnityInstallation.cs" />
+    <Compile Include="Project\BuildSteps\UnityBuildStep\UnityProcess.cs" />
+    <Compile Include="Project\Project.cs" />
+    <Compile Include="Project\Notification\NotificationConfig.cs" />
+    <Compile Include="Project\Notification\EmailNotification.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="RunProcessAsTask\" />
+    <Folder Include="Project\" />
+    <Folder Include="VersionControl\" />
+    <Folder Include="VersionControl\Git\" />
+    <Folder Include="Project\Distribution\" />
+    <Folder Include="Project\Archival\" />
+    <Folder Include="Project\BuildSteps\" />
+    <Folder Include="Project\Notification\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
