--- a/UnityBuildServer/UnityBuildServer.csproj
+++ b/UnityBuildServer/UnityBuildServer.csproj
@@ -49,34 +49,34 @@
     <Compile Include="Project\ProjectConfig.cs" />
     <Compile Include="VersionControl\IVCS.cs" />
     <Compile Include="Project\BuildStepConfig.cs" />
-    <Compile Include="VersionControl\IVCSConfiguration.cs" />
-    <Compile Include="VersionControl\Git\GitVCSConfiguration.cs" />
+    <Compile Include="VersionControl\VCSConfig.cs" />
+    <Compile Include="VersionControl\Git\GitVCSConfig.cs" />
     <Compile Include="Project\BuildTargetConfig.cs" />
     <Compile Include="VersionNumber.cs" />
-    <Compile Include="Project\Distribution\DistributionConfig.cs" />
-    <Compile Include="Project\Distribution\FTPDistributionConfig.cs" />
-    <Compile Include="Project\Distribution\SteamDistributionConfig.cs" />
-    <Compile Include="Project\Archival\ArchiveStepConfig.cs" />
-    <Compile Include="Project\Archival\FolderArchiveStep.cs" />
-    <Compile Include="Project\Archival\FolderArchiveStepConfig.cs" />
-    <Compile Include="Project\Archival\ZipArchiveStep.cs" />
-    <Compile Include="Project\BuildSteps\ShellBuildStep\ShellBuildStepConfig.cs" />
-    <Compile Include="Project\BuildSteps\UnityBuildStep\UnityBuildStepConfig.cs" />
-    <Compile Include="Project\BuildSteps\UnityBuildStep\UnityInstallation.cs" />
-    <Compile Include="Project\BuildSteps\UnityBuildStep\UnityProcess.cs" />
+    <Compile Include="Project\Distribute\DistributeConfig.cs" />
+    <Compile Include="Project\Distribute\FTPDistributeConfig.cs" />
+    <Compile Include="Project\Distribute\SteamDistributeConfig.cs" />
+    <Compile Include="Project\Archive\ArchiveStepConfig.cs" />
+    <Compile Include="Project\Archive\FolderArchiveStep.cs" />
+    <Compile Include="Project\Archive\FolderArchiveStepConfig.cs" />
+    <Compile Include="Project\Archive\ZipArchiveStep.cs" />
+    <Compile Include="Project\Build\ShellBuildStep\ShellBuildStepConfig.cs" />
+    <Compile Include="Project\Build\UnityBuildStep\UnityBuildConfig.cs" />
+    <Compile Include="Project\Build\UnityBuildStep\UnityInstallation.cs" />
+    <Compile Include="Project\Build\UnityBuildStep\UnityProcess.cs" />
     <Compile Include="Project\ProjectPipeline.cs" />
-    <Compile Include="Project\Notification\NotificationConfig.cs" />
-    <Compile Include="Project\Notification\EmailNotificationConfig.cs" />
-    <Compile Include="Project\Archival\ArchiveStep.cs" />
-    <Compile Include="Project\Archival\ZipArchiveStepConfig.cs" />
-    <Compile Include="Project\Notification\EmailNotificationStep.cs" />
-    <Compile Include="Project\Distribution\FTPDistributionStep.cs" />
-    <Compile Include="Project\Distribution\DistributionStep.cs" />
-    <Compile Include="Project\Distribution\SteamDistributionStep.cs" />
-    <Compile Include="Project\Notification\NotificationStep.cs" />
-    <Compile Include="Project\BuildSteps\BuildStep.cs" />
-    <Compile Include="Project\BuildSteps\ShellBuildStep\ShellBuildStep.cs" />
-    <Compile Include="Project\BuildSteps\UnityBuildStep\UnityBuildStep.cs" />
+    <Compile Include="Project\Notify\NotifyConfig.cs" />
+    <Compile Include="Project\Notify\EmailNotifyConfig.cs" />
+    <Compile Include="Project\Archive\ArchiveStep.cs" />
+    <Compile Include="Project\Archive\ZipArchiveConfig.cs" />
+    <Compile Include="Project\Notify\EmailNotifyStep.cs" />
+    <Compile Include="Project\Distribute\FTPDistributeStep.cs" />
+    <Compile Include="Project\Distribute\DistributeStep.cs" />
+    <Compile Include="Project\Distribute\SteamDistributeStep.cs" />
+    <Compile Include="Project\Notify\NotifyStep.cs" />
+    <Compile Include="Project\Build\BuildStep.cs" />
+    <Compile Include="Project\Build\ShellBuildStep\ShellBuildStep.cs" />
+    <Compile Include="Project\Build\UnityBuildStep\UnityBuildStep.cs" />
     <Compile Include="Build\BuilderConfig.cs" />
     <Compile Include="Build\Builder.cs" />
     <Compile Include="Build\ArchiveInfo.cs" />
@@ -91,10 +91,10 @@
     <Folder Include="Project\" />
     <Folder Include="VersionControl\" />
     <Folder Include="VersionControl\Git\" />
-    <Folder Include="Project\Distribution\" />
-    <Folder Include="Project\Archival\" />
-    <Folder Include="Project\BuildSteps\" />
-    <Folder Include="Project\Notification\" />
+    <Folder Include="Project\Distribute\" />
+    <Folder Include="Project\Archive\" />
+    <Folder Include="Project\Build\" />
+    <Folder Include="Project\Notify\" />
     <Folder Include="Build\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
