Text replacement class can swap in-line tags with strings. Shell build script starts inside the current project's working directory.

--- a/UnityBuildServer/UnityBuildServer.csproj
+++ b/UnityBuildServer/UnityBuildServer.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Build\BuildInfo.cs" />
     <Compile Include="Build\DistributeInfo.cs" />
     <Compile Include="BuildConsole.cs" />
+    <Compile Include="TextReplacements.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
