Added SFTP distribution step

--- a/UnityBuildServer/packages.config
+++ b/UnityBuildServer/packages.config
@@ -4,4 +4,5 @@
   <package id="LibGit2Sharp" version="0.22.0" targetFramework="net45" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.129" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="SSH.NET" version="2016.0.0" targetFramework="net45" />
 </packages>
