Build steps return success status

--- a/UnityBuildServer/UnityBuildCore.csproj
+++ b/UnityBuildServer/UnityBuildCore.csproj
@@ -97,6 +97,8 @@
     <Compile Include="Project\Build\UnityBuildStep\UnityExecuteMethodBuildConfig.cs" />
     <Compile Include="Project\Build\UnityBuildStep\UnityBuildStep.cs" />
     <Compile Include="Project\Build\UnityBuildStep\UnityBuildResults.cs" />
+    <Compile Include="Build\BuildResult.cs" />
+    <Compile Include="Build\BuildCompletionStatus.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
