--- a/UnityBuildServer/UnityBuildCore.csproj
+++ b/UnityBuildServer/UnityBuildCore.csproj
@@ -56,30 +56,16 @@
     <Compile Include="VersionControl\Git\GitVCSConfig.cs" />
     <Compile Include="Project\BuildTargetConfig.cs" />
     <Compile Include="VersionNumber.cs" />
-    <Compile Include="Project\Distribute\DistributeStepConfig.cs" />
-    <Compile Include="Project\Distribute\FTPDistributeConfig.cs" />
-    <Compile Include="Project\Distribute\SteamDistributeConfig.cs" />
-    <Compile Include="Project\Archive\ArchiveStepConfig.cs" />
     <Compile Include="Project\Archive\FolderArchiveStep.cs" />
-    <Compile Include="Project\Archive\FolderArchiveConfig.cs" />
     <Compile Include="Project\Archive\ZipArchiveStep.cs" />
-    <Compile Include="Project\Build\ShellBuildStep\ShellBuildStepConfig.cs" />
-    <Compile Include="Project\Build\UnityBuildStep\UnityStandardBuildConfig.cs" />
-    <Compile Include="Project\Build\UnityBuildStep\UnityInstallation.cs" />
-    <Compile Include="Project\Build\UnityBuildStep\UnityProcess.cs" />
     <Compile Include="Project\ProjectPipeline.cs" />
-    <Compile Include="Project\Notify\NotifyStepConfig.cs" />
-    <Compile Include="Project\Notify\EmailNotifyConfig.cs" />
     <Compile Include="Project\Archive\ArchiveStep.cs" />
-    <Compile Include="Project\Archive\ZipArchiveConfig.cs" />
     <Compile Include="Project\Notify\EmailNotifyStep.cs" />
     <Compile Include="Project\Distribute\FTPDistributeStep.cs" />
     <Compile Include="Project\Distribute\DistributeStep.cs" />
     <Compile Include="Project\Distribute\SteamDistributeStep.cs" />
     <Compile Include="Project\Notify\NotifyStep.cs" />
     <Compile Include="Project\Build\IBuildStep.cs" />
-    <Compile Include="Project\Build\ShellBuildStep\ShellBuildStep.cs" />
-    <Compile Include="Project\Build\UnityBuildStep\UnityStandardBuildStep.cs" />
     <Compile Include="Build\BuilderConfig.cs" />
     <Compile Include="Build\Builder.cs" />
     <Compile Include="Build\ArchiveInfo.cs" />
@@ -88,22 +74,35 @@
     <Compile Include="BuildConsole.cs" />
     <Compile Include="TextReplacements.cs" />
     <Compile Include="Serializer.cs" />
-    <Compile Include="Project\Distribute\SFTPDistributeConfig.cs" />
     <Compile Include="Project\Distribute\SFTPDistributeStep.cs" />
-    <Compile Include="Project\Build\UnityBuildStep\UnityParameterizedBuildConfig.cs" />
-    <Compile Include="Project\Build\UnityBuildStep\UnityParameterizedBuildStep.cs" />
-    <Compile Include="Project\Build\UnityBuildStep\UnityPlatform.cs" />
-    <Compile Include="Project\Build\UnityBuildStep\UnityExecuteMethodBuildStep.cs" />
-    <Compile Include="Project\Build\UnityBuildStep\UnityExecuteMethodBuildConfig.cs" />
-    <Compile Include="Project\Build\UnityBuildStep\UnityBuildStep.cs" />
     <Compile Include="Build\BuildResult.cs" />
     <Compile Include="Build\BuildCompletionStatus.cs" />
     <Compile Include="Build\VCSResult.cs" />
-    <Compile Include="Project\Build\BuildStepConfigConverter.cs" />
-    <Compile Include="Project\Distribute\DistributeStepConfigConverter.cs" />
     <Compile Include="Project\Notify\NotifyStepConfigConverter.cs" />
-    <Compile Include="Project\Archive\ArchiveStepConfigConverter.cs" />
     <Compile Include="VersionControl\VCSConfigConverter.cs" />
+    <Compile Include="Project\Archive\Configuration\ArchiveStepConfig.cs" />
+    <Compile Include="Project\Archive\Configuration\ArchiveStepConfigConverter.cs" />
+    <Compile Include="Project\Archive\Configuration\FolderArchiveConfig.cs" />
+    <Compile Include="Project\Archive\Configuration\ZipArchiveConfig.cs" />
+    <Compile Include="Project\Build\Configuration\ShellBuildStepConfig.cs" />
+    <Compile Include="Project\Build\Configuration\UnityExecuteMethodBuildConfig.cs" />
+    <Compile Include="Project\Build\Configuration\UnityParameterizedBuildConfig.cs" />
+    <Compile Include="Project\Build\Configuration\UnityStandardBuildConfig.cs" />
+    <Compile Include="Project\Build\Configuration\UnityPlatform.cs" />
+    <Compile Include="Project\Build\Configuration\BuildStepConfigConverter.cs" />
+    <Compile Include="Project\Build\ShellBuildStep.cs" />
+    <Compile Include="Project\Build\UnityBuildStep.cs" />
+    <Compile Include="Project\Build\UnityExecuteMethodBuildStep.cs" />
+    <Compile Include="Project\Build\UnityParameterizedBuildStep.cs" />
+    <Compile Include="Project\Build\UnityStandardBuildStep.cs" />
+    <Compile Include="Project\Build\Configuration\UnityInstallation.cs" />
+    <Compile Include="Project\Distribute\Configuration\DistributeStepConfig.cs" />
+    <Compile Include="Project\Distribute\Configuration\DistributeStepConfigConverter.cs" />
+    <Compile Include="Project\Distribute\Configuration\FTPDistributeConfig.cs" />
+    <Compile Include="Project\Distribute\Configuration\SFTPDistributeConfig.cs" />
+    <Compile Include="Project\Distribute\Configuration\SteamDistributeConfig.cs" />
+    <Compile Include="Project\Notify\Configuration\EmailNotifyConfig.cs" />
+    <Compile Include="Project\Notify\Configuration\NotifyStepConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -118,6 +117,10 @@
     <Folder Include="Project\Build\" />
     <Folder Include="Project\Notify\" />
     <Folder Include="Build\" />
+    <Folder Include="Project\Archive\Configuration\" />
+    <Folder Include="Project\Build\Configuration\" />
+    <Folder Include="Project\Distribute\Configuration\" />
+    <Folder Include="Project\Notify\Configuration\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
