--- a/SeudoBuild.Core/SeudoBuild.Core.csproj
+++ b/SeudoBuild.Core/SeudoBuild.Core.csproj
@@ -51,11 +51,9 @@
     <Compile Include="VersionControl\Git\LFSFilter.cs" />
     <Compile Include="Project\ProjectConfig.cs" />
     <Compile Include="VersionControl\VersionControlSystem.cs" />
-    <Compile Include="Project\BuildStepConfig.cs" />
     <Compile Include="VersionControl\VCSConfig.cs" />
     <Compile Include="VersionControl\Git\GitVCSConfig.cs" />
     <Compile Include="Project\BuildTargetConfig.cs" />
-    <Compile Include="VersionNumber.cs" />
     <Compile Include="Project\Archive\FolderArchiveStep.cs" />
     <Compile Include="Project\Archive\ZipArchiveStep.cs" />
     <Compile Include="Project\ProjectPipeline.cs" />
@@ -78,30 +76,12 @@
     <Compile Include="Build\BuildResult.cs" />
     <Compile Include="Build\BuildCompletionStatus.cs" />
     <Compile Include="Build\VCSResult.cs" />
-    <Compile Include="Project\Notify\NotifyStepConfigConverter.cs" />
     <Compile Include="VersionControl\VCSConfigConverter.cs" />
-    <Compile Include="Project\Archive\Configuration\ArchiveStepConfig.cs" />
-    <Compile Include="Project\Archive\Configuration\ArchiveStepConfigConverter.cs" />
-    <Compile Include="Project\Archive\Configuration\FolderArchiveConfig.cs" />
-    <Compile Include="Project\Archive\Configuration\ZipArchiveConfig.cs" />
-    <Compile Include="Project\Build\Configuration\ShellBuildStepConfig.cs" />
-    <Compile Include="Project\Build\Configuration\UnityExecuteMethodBuildConfig.cs" />
-    <Compile Include="Project\Build\Configuration\UnityParameterizedBuildConfig.cs" />
-    <Compile Include="Project\Build\Configuration\UnityStandardBuildConfig.cs" />
-    <Compile Include="Project\Build\Configuration\UnityPlatform.cs" />
-    <Compile Include="Project\Build\Configuration\BuildStepConfigConverter.cs" />
     <Compile Include="Project\Build\ShellBuildStep.cs" />
     <Compile Include="Project\Build\UnityBuildStep.cs" />
     <Compile Include="Project\Build\UnityExecuteMethodBuildStep.cs" />
     <Compile Include="Project\Build\UnityParameterizedBuildStep.cs" />
     <Compile Include="Project\Build\UnityStandardBuildStep.cs" />
-    <Compile Include="Project\Distribute\Configuration\DistributeStepConfig.cs" />
-    <Compile Include="Project\Distribute\Configuration\DistributeStepConfigConverter.cs" />
-    <Compile Include="Project\Distribute\Configuration\FTPDistributeConfig.cs" />
-    <Compile Include="Project\Distribute\Configuration\SFTPDistributeConfig.cs" />
-    <Compile Include="Project\Distribute\Configuration\SteamDistributeConfig.cs" />
-    <Compile Include="Project\Notify\Configuration\EmailNotifyConfig.cs" />
-    <Compile Include="Project\Notify\Configuration\NotifyStepConfig.cs" />
     <Compile Include="Project\Build\UnityInstallation.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -117,10 +97,12 @@
     <Folder Include="Project\Build\" />
     <Folder Include="Project\Notify\" />
     <Folder Include="Build\" />
-    <Folder Include="Project\Archive\Configuration\" />
-    <Folder Include="Project\Build\Configuration\" />
-    <Folder Include="Project\Distribute\Configuration\" />
-    <Folder Include="Project\Notify\Configuration\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SeudoBuild.Data\SeudoBuild.Data.csproj">
+      <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
+      <Name>SeudoBuild.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
