--- a/SeudoBuild.Agent/packages.config
+++ b/SeudoBuild.Agent/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Mono.Options" version="4.4.0.0" targetFramework="net45" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net46" />
+  <package id="RabbitMQ.Client" version="4.1.1" targetFramework="net46" />
 </packages>
