--- a/SeudoBuild.Core.Tests/SeudoBuild.Core.Tests.csproj
+++ b/SeudoBuild.Core.Tests/SeudoBuild.Core.Tests.csproj
@@ -31,7 +31,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Test.cs" />
+    <Compile Include="UnityInstallationTest.cs" />
+    <Compile Include="MockFileSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -40,6 +41,10 @@
     <ProjectReference Include="..\SeudoBuild.Core\SeudoBuild.Core.csproj">
       <Project>{96AEC5D7-D646-4A04-8624-383CC86C047C}</Project>
       <Name>SeudoBuild.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Data\SeudoBuild.Data.csproj">
+      <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
+      <Name>SeudoBuild.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
