--- a/SeudoBuild.Core/SeudoBuild.Core.csproj
+++ b/SeudoBuild.Core/SeudoBuild.Core.csproj
@@ -83,6 +83,8 @@
     <Compile Include="Project\Build\UnityParameterizedBuildStep.cs" />
     <Compile Include="Project\Build\UnityStandardBuildStep.cs" />
     <Compile Include="Project\Build\UnityInstallation.cs" />
+    <Compile Include="IO\FileSystem.cs" />
+    <Compile Include="IO\IFileSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -97,6 +99,7 @@
     <Folder Include="Project\Build\" />
     <Folder Include="Project\Notify\" />
     <Folder Include="Build\" />
+    <Folder Include="IO\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SeudoBuild.Data\SeudoBuild.Data.csproj">
