--- a/SeudoBuild.Core/SeudoBuild.Core.csproj
+++ b/SeudoBuild.Core/SeudoBuild.Core.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Build\IPipelineStep.cs" />
     <Compile Include="Build\PipelineStepResults.cs" />
     <Compile Include="Build\BuildStepResults.cs" />
+    <Compile Include="Project\Build\UnityLogParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
